# wine_analysis_hplc_uv

./: .gitignore  .pre-commit-config.yaml  2023-02-08_eda.ipynb  2023-02-11_EDA.ipynb  2023-02-11_playing_with_rainbow_api.ipynb  2023-02-21_testing-plotting.ipynb  2023-02-22_optimising_3d_specta_plots.ipynb.REMOVED.git-id  2023-02-24_learning_python_classes.ipynb  2023-02-25_exploring-rainbow-api.ipynb  2023-02-28_trying_to_model_3d_surfaces.ipynb  2023-03-28_backup_sample_tracker.csv  LICENSE.md  My Library.bib  README.md  Untitled1.ipynb  __init__.py  _environment  _quarto.yml  agilent_signal_converter.py  agilette_library.csv  avantor_wine_spectrum.py  bokeh_getting_working.ipynb  chapter_signal_preprocessing.ipynb  chemstation_data_dicts_tuple.pk.REMOVED.git-id  combo_dif.py  core.py  creating_raw_cupshz_testset.ipynb  dir_ext_set_getter.py  find_compare.sh  get_spectrum_chromatogram_column_names.py  google_sheets_api.py  homepage_wine-analysis.md  hplc_dad_plots.py  learning_python_regex.ipynb  logbook.md  main.py  pivottablejs.html  playing_with_argpase.py  preprocessing.py  project_tree.txt  (+20 more)
agilent_signal_converter/: agilent_signal_converter.py
agilette/: 2023-03-08_testing-agilette-data-objs.py  2023-03-29_reworking-library-metadatatable-datatable.md  agilette.py  agilette_core.py  example_single_run_plot.py  example_wavelength_overlaid_plot.py  example_wavelength_overplat_plot.py  library.py  run_dir.py  signals_section_tags.html  testing_agilette_library.py
cellartracker/: init_raw_cellartracker_table.py
cellartracker_methods/: cellartracker_cleaner.py  download_cellartracker_table.py  init_raw_cellartracker_table.py
chemstation/: chemstation_metadata_table_cleaner.py  chemstation_methods.py  chemstation_process_entry.py  chemstation_to_db_methods.py  init_chemstation_data_metadata.py  pickle_chemstation_data.py
chemstation_processing_methods/: chemstation_methods.py
core/: adapt_super_pipe_to_db.py  build_library.py
data/: 2023-02-09_14-30-37_Z3_uv-data.csv
db_methods/: db_methods.py
devtools/: project_settings.py
df_methods/: df_methods.py
google_sheets_api/: google_sheets_api.py
notebooks/: 2023-02-11_playing_with_rainbow_api.ipynb  2023-02-22_parsing_uv_files.ipynb  2023-02-25_exploring-rainbow-api.ipynb  2023-02-27_surface_plots_3d.ipynb  2023-02-27_testing-UI-modules.ipynb  2023-02-28_playing_with_sci_peak_plots.ipynb  2023-02-28_scipy.ipynb  2023-02-28_trying_to_model_3d_surfaces.ipynb  2023-03-02_adding-sequences-to-data-table.ipynb  2023-03-06_importing_agilette_troubleshooting.ipynb  2023-03-06_void_vol_calculation.ipynb  2023-03-07_acetone_data.py  2023-03-07_prototyping_extracting_detector_wavelength.py  2023-03-08_investigating_wavelength_maxima.ipynb  2023-03-09_testing-xml-with-acaml.ipynb  2023-03-09_testing_multiprocessing.ipynb  2023-03-09_xml.ipynb  2023-03-14_identifying_optimal_wavelength.ipynb  2023-03-14_identifying_optimal_wavelength.ipynb.REMOVED.git-id  2023-03-14_investigating-shortening-runtimes.ipynb  2023-03-15_investigating-optimal-wavelength-for-all-runs.ipynb  2023-03-22_understanding_apply.ipynb  2023-03-23_starting_optimal_wavelength_analysisv2.py  2023-03-23_testing_spectrum_metadata.py  2023-03-28-joining-cellartracker-metadata.ipynb  2023-03-28_exploring_python_special_characters.ipynb  2023-03-28_tabulating-past-experiments.ipynb  2023-03-30_sample-data-quality-investigation.ipynb  2023-03-30_testing-loading-full-library-spectrum.ipynb  2023-03-30_timeline_of_experiments.ipynb  2023-04-01_investigating-runs-without-signals.ipynb  2023-04-05_description-of-dataset-thus-far.ipynb  avantor-df-cleaner_2023-04-05.py  avantor_wine_spectrum.py  backcor_on_sampleset.ipynb  baseline_correction.ipynb  cleaning-sample-tracker.py  creating_downsampled_testset.ipynb  debugging_uv_data.ipynb  derivatives_of_chromatograms.ipynb  (+20 more)
notes/: devnotes.md  eda.md  homepage_wine-analysis.md  mres_logbook.md  notes_quarto.md
notes/etl/: etl.md
old_tests/: __init__.py  test_build_library.py  test_spectra_df.py
plot_methods/: plotly_plot_methods.py  sns_plot_methods.py
prototype_code/: adapt_super_pipe_to_db.py  build_library.py  chemstation_metadata_table_cleaner.py  chrom_quality_analyser.py  db_methods.py  df_cleaning_methods.py  df_methods.py  duck_db_methods.py  init_chemstation_data_metadata.py  init_raw_cellartracker_table.py  init_raw_sample_tracker_table.py  initialise_db_cellartracker.py  initialise_db_sample_tracker.py  initialising_db_chemstation.py  observing_spectra_shape_variation.py  peak_alignment.py  peak_alignment_pipe.py  peak_alignment_spectrum_chromatograms.py  plot_methods.py  plotly_plot_methods.py  sample_tracker_cleaner.py  sample_tracker_methods.py  signal_alignment_methods.py  signal_data_treatment_methods.py  sns_plot_methods.py  wine_auth_db_initializer.py
prototypes/: chrom_quality_analyser.py  observing_spectra_shape_variation.py
raw_uv_cuprac_comparison/: fetch_raw_and_cuprac_samples_as_overlay.py
sampletracker/: init_raw_sample_tracker_table.py  sample_tracker_cleaner.py  sample_tracker_methods.py
scripts/: 2023-02-28_playing_with_sci_peak_plots.ipynb  2023-03-02_adding-sequences-to-data-table.ipynb  2023-03-10_baselines.ipynb  acaml_read.py  data_interface.py  dir_contents_dict_builder.py  hplc_dad_plots.py  reagent_calculator.py  remove_empty_sequences.py  setup.py
signal_processing/: signal_alignment_methods.py  signal_data_treatment_methods.py
streamlit_methods/: streamlit_spectra_display.py
tests/: chemstationprocessor_tests.py  conftest.py  constants.py  datastructs.py  definitions.py  sampletrackerprocessor_test.py  test.db.wal  test_chemstation.py  test_df.py  test_gspread.py  test_my_test_tools.py  test_mycellartracker  test_sampletracker.py  test_spectra_df.py  testing_inj_vol.ipynb  testing_reading_db.py
wine_analysis_hplc_uv/: chemstation_data_dicts_tuple.pk  get_spectrum_chromatogram_column_names.py  test_chemstation.py
wine_deg_study/: 2023-04-11_sequence_planner.ipynb  2023-04-11_wine_deg_sample_tracker_creation.ipynb  experiment_planner.py  time_step_schedule.py
(+886 files in other folders)
