[tool.poetry]
name = "wine-analysis-hplc-uv"
version = "0.1.0"
description = ""
authors = ["OctaneOolong <62565951+OctaneOolong@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
scipy = "1.10.1"
altair = "4.2.2"
attrs = "23.1.0"
beautifulsoup4 = "4.12.2"
blinker = "1.6.2"
build = "0.10.0"
cachetools = "5.3.0"
cellartracker = "1.1.1"
certifi = "2023.5.7"
charset-normalizer = "3.1.0"
click = "8.1.3"
colored-traceback = "0.3.0"
contourpy = "1.0.7"
cycler = "0.11.0"
decorator = "5.1.1"
docopt = "0.6.2"
dtw = "1.4.0"
duckdb = "0.8.0"
entrypoints = "0.4"
fonttools = "4.39.4"
fuzzywuzzy = "0.18.0"
gitdb = "4.0.10"
gitpython = "3.1.31"
google = "3.0.0"
google-api-core = "2.11.0"
google-api-python-client = "2.87.0"
google-auth = "2.18.1"
google-auth-httplib2 = "0.1.0"
google-auth-oauthlib = "1.0.0"
googleapis-common-protos = "1.59.0"
httplib2 = "0.22.0" 
idna = "3.4"
importlib-metadata = "6.6.0"
iniconfig = "2.0.0"
jinja2 = "3.1.2"
jsonschema = "4.17.3"
kiwisolver = "1.4.4"
levenshtein = "0.21.0"
lxml = "4.9.2"
markdown-it-py = "2.2.0"
markupsafe = "2.1.2"
matplotlib = "3.7.1"
mdurl = "0.1.2"
numpy = "1.24.3"
oauthlib = "3.2.2"
packaging = "23.1"
pandas = "2.0.2"
pillow = "9.5.0"
pipreqs = "0.4.13"
pluggy = "1.0.0"
protobuf = "3.20.3"
pyarrow = "12.0.0"
pyasn1 = "0.5.0"
pyasn1-modules = "0.3.0"
pybaselines = "1.0.0"
pydeck = "0.8.1b0"
pygments = "2.15.1"
pympler = "1.0.1"
pyparsing = "3.0.9"
pyproject-hooks = "1.0.0"
pyrsistent = "0.19.3"
python-dateutil = "2.8.2"
python-levenshtein = "0.21.0"
python-lzf = "0.2.4"
pytz = "2023.3"
rapidfuzz = "3.0.0"
requests = "2.31.0"
requests-oauthlib = "1.3.1"
rich = "13.3.5"
rsa = "4.9"
six = "1.16.0"
smmap = "5.0.0"
soupsieve = "2.4.1"
streamlit = "1.22.0"
tenacity = "8.2.2"
toml = "0.10.2"
toolz = "0.12.0"
tornado = "6.3.2"
typing-extensions = "4.6.1"
tzdata = "2023.3"
tzlocal = "5.0.1"
uritemplate = "4.1.1"
urllib3 = "1.26.16"
validators = "0.20.0"
yarg = "0.1.9"
zipp = "3.15.0"
gspread = "^5.9.0"
plotly = "^5.15.0"
mydevtools = {path = "/Users/jonathan/mycode/python_code/mydevtools", develop = true}
rainbow-api-fork = {git = "https://github.com/jonathanstathakis/rainbow.git"}
pre-commit = "^3.3.3"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
