[tool.poetry]
name = "wine-analysis-hplc-uv"
version = "0.2.0"
description = ""
authors = ["OctaneOolong <62565951+OctaneOolong@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12.2, <4.0"
altair = "4.2.2"
attrs = "23.1.0"
beautifulsoup4 = "4.12.2"
blinker = "1.6.2"
build = "0.10.0"
cachetools = "5.3.0"
cellartracker = "1.1.1"
certifi = "2023.5.7"
charset-normalizer = "3.1.0"
click = "8.1.3"
colored-traceback = "0.3.0"
contourpy = "1.0.7"
cycler = "0.11.0"
decorator = "5.1.1"
docopt = "0.6.2"
duckdb = "0.10.2"
entrypoints = "0.4"
fonttools = "4.39.4"
fuzzywuzzy = "0.18.0"
gitdb = "4.0.10"
gitpython = "3.1.31"
google = "3.0.0"
google-api-core = "2.11.0"
google-api-python-client = "2.87.0"
google-auth = "2.18.1"
google-auth-httplib2 = "0.1.0"
google-auth-oauthlib = "1.0.0"
googleapis-common-protos = "1.59.0"
httplib2 = "0.22.0" 
idna = "3.4"
importlib-metadata = "6.6.0"
iniconfig = "2.0.0"
jinja2 = "3.1.2"
jsonschema = "4.17.3"
kiwisolver = "1.4.4"
lxml = "5.2.2"
markdown-it-py = "2.2.0"
markupsafe = "2.1.2"
matplotlib = "3.7.1"
mdurl = "0.1.2"
numpy = "1.26.4"
oauthlib = "3.2.2"
packaging = "23.1"
pandas = "2.2.2"
pillow = "9.5.0"
pipreqs = "0.4.13"
pluggy = "1.0.0"
protobuf = "3.20.3"
pyasn1 = "0.5.0"
pyasn1-modules = "0.3.0"
pybaselines = "1.0.0"
pydeck = "0.8.1b0"
pygments = "2.15.1"
pympler = "1.0.1"
pyparsing = "3.0.9"
pyproject-hooks = "1.0.0"
pyrsistent = "0.19.3"
python-dateutil = "2.8.2"
python-lzf = "0.2.4"
pytz = "2023.3"
requests = "2.31.0"
requests-oauthlib = "1.3.1"
rich = "13.3.5"
rsa = "4.9"
six = "1.16.0"
smmap = "5.0.0"
soupsieve = "2.4.1"
streamlit = "1.22.0"
tenacity = "8.2.2"
toml = "0.10.2"
toolz = "0.12.0"
tornado = "6.3.2"
typing-extensions = "4.6.1"
tzdata = "2023.3"
tzlocal = "5.0.1"
uritemplate = "4.1.1"
urllib3 = "1.26.16"
validators = "0.20.0"
yarg = "0.1.9"
zipp = "3.15.0"
gspread = "^5.12.4"
directory-tree = "^0.0.3.1"
pytest = "^7.4.4"
sqlalchemy = "^2.0.30"
duckdb-engine = "^0.9.0"
openpyxl = "^3.1.2"
seaborn = "^0.12.2"
kaleido = "0.2.1"
xhtml2pdf = "^0.2.11"
pdf-reports = "^0.3.4"
jupyter-contrib-nbextensions = "^0.7.0"
pyppeteer = "^1.0.2"
pyqt6 = "^6.7.0"
tabulate = "^0.9.0"
pre-commit = "^3.7.1"
scikit-learn = "^1.4.2"
ipympl = "^0.9.3"
pandera = "^0.16.1"
dtw-python = "^1.4.4"
pandas-datareader = "^0.10.0"
pyperclip = "^1.8.2"
random-word = "^1.0.11"
jupyter-bokeh = "^3.0.7"
nbstripout = "^0.6.1"
scipy = "^1.13.0"
dtwparallel = "^0.9.39"
dtwalign = "^0.1.1"
xgboost = "^2.0.3"
patchworklib = "^0.6.2"
plotnine = "^0.12.3"
jupysql = "^0.10.2"
pyampd = "^0.0.1"
graphviz = "^0.20.1"
imbalanced-learn = "^0.11.0"
bioinfokit = "^2.1.3"
termcolor = "^2.4.0"
ipython = "^8.24.0"
deprecated = "^1.2.14"
rapidfuzz = "^3.9.1"
rainbow-api = {git = "https://github.com/jonathanstathakis/rainbow.git"}
mydevtools = {git = "https://github.com/jonathanstathakis/mydevtools.git"}
python-levenshtein = "^0.25.1"
polars = "0.20.29"
hvplot = "^0.10.0"
ruff = "^0.4.5"
quarto = "^0.1.0"
jupyter = "^1.0.0"
nbconvert = "^7.16.4"

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_format = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
