[metadata]
name = wineanalysis
version = 0.0.1
author = Jonathan Stathakis
author_email = j.stathakis@live.com.au
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True