[metadata]
name = wine_analysis_hplc_uv
version = 0.0.1
author = Jonathan George Harold Stathakis
author_email = j.stathakis@live.com.au
description = A package template
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alod83/package_template
project_urls =
bug tracker = https://github.com/alod83/package_template/issues
classifiers =
programming language :: Python :: 3
license :: OSI Approved :: MIT License
operating system :: OS Independent
[options]
package_dir = 
    wine_analysis_hplc_uv = src/wine_analysis_hplc_uv
packages = find:
python_requires = >=3.6
install_requires =
   numpy